# b2-speaking-practice

./: .dockerignore  .env.custom.example  .env.example  .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  SECURITY.md  compose.custom.yaml  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  run-offline.bat  run-offline.sh
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  VOICE_PROFILES.md  pyproject.toml  railway.json
apps/api/app/: __init__.py  api.py  audio_analysis.py  config.py  database.py  evaluation_schemas.py  evidence.py  file_validation.py  gemini_evaluation.py  main.py  models.py  objective_checks.py  processor.py  sample_data.py  schemas.py  scoring.py  security.py  storage.py
apps/api/app/providers/: __init__.py  base.py  factory.py  mock.py  modal_provider.py  openai_provider.py  whisperx_provider.py
apps/api/scripts/: qa_part3_pipeline.py  qa_real_pipeline.py  whisperx_diarize.py
apps/api/tests/: conftest.py  test_api_flow.py  test_config.py  test_database_migration.py  test_evaluation_controls.py  test_gemini_evaluation.py  test_modal_provider.py  test_openrouter_provider.py  test_practice_content.py  test_scoring.py  test_whisperx_provider.py
apps/web/: .env.example  .prettierignore  Dockerfile  eslint.config.mjs  (+3 more)
docs/: CONTENT.md  CUSTOM_MODE.md
e2e/: examiner-audio-assets.spec.ts  part2-flow.spec.ts  part3-pair-flow.spec.ts  responsive-accessibility.spec.ts
scripts/: generate_part1_audio.py  generate_part3_audio.py  run-python.mjs
supabase/: README.md
(+26 files in other folders)
