[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b2-speaking-api"
version = "0.1.0"
description = "API del corte vertical individual de B2 Speaking Part 2"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.30,<1",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<1",
  "modal>=1.5,<2",
  "numpy>=2.2,<3",
  "openai>=2.20,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.37,<3",
  "starlette>=1.3.1,<2",
  "supabase>=2.15,<3",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.6,<3",
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.9,<1"
]
audio = [
  "av>=14,<17"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["E501", "S101"]
